Changelog
=========

1.0b5 - Unreleased
------------------

- Set overflow-y:auto on ajax overlays to support forms longer than the
  viewport.
  [stevem]

1.0b4 - 2010-05-01
------------------

- Styling tweaks for full item view.
  [elro]

1.0b3 - 2010-04-10
------------------

- Removed old mobile.css styling, since it doesn't really do anything useful,
  and is actively harmful for certain devices. If you want to have mobile
  styling, we recommend starting with the Sunburst theme as a base instead.
  [limi]

- Adjusted viewlets so that plone.app.layout specifies the viewlet
  configuration used by Sunburst, and this package now overrides those
  to restore the old positions.
  [davisagli]

- Fix the uninstall profile to be executed and switch to Sunburst.
  Fixes http://dev.plone.org/plone/ticket/10346.
  [dukebody]

1.0b2 - 2010-03-05
------------------

- Hide the "up to groups overview" link and fieldset border in the "add group"
  overlay.
  Closes http://dev.plone.org/plone/ticket/10149
  Closes http://dev.plone.org/plone/ticket/10150
  [stuttle]

1.0b1 - 2010-02-18
------------------

- Updated the CSS to work using only #content, now that .documentContent and
  #region-content are removed.
  This refs http://dev.plone.org/plone/ticket/10231
  [limi]

- Remove common CSS registries. Adjust skin layers order.
  Refs http://dev.plone.org/plone/ticket/9988.
  [dukebody]

- Highlighted current item in actions menu with the font color and boldness.
  [spliter]

1.0a4 - 2010-02-01
------------------

- Fix packaging issues.
  [esteele]

1.0a3 - 2010-02-01
------------------

- Register iefixes (css and js) in the proper resource registries,
  using the conditionalcomments property.  
  Refs http://dev.plone.org/plone/ticket/9278.  
  [dukebody]

- Move iefixes.js to this package, since we agreed
  upon that every theme should be responsible of its own fixes for IE.
  Refs http://dev.plone.org/plone/ticket/9278.
  [dukebody]
