@@ -8,6 +8,12 @@
       type="zope.publisher.interfaces.browser.IBrowserSkinType"
       name="Plone Classic Theme"
       />
+
+  <interface
+      interface=".interfaces.IThemeSpecific"
+      type="zope.publisher.interfaces.browser.IBrowserSkinType"
+      name="Old Plone 3 Custom Theme"
+      />
   
   <!-- move site actions to portalheader manager -->
   <browser:viewlet
